--- a/public/index.html
+++ b/public/index.html
@@ -6,27 +6,67 @@
 
     <!-- External CSS -->
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,700,700i" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/tweets.css" type="text/css" />
 
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/app.js"></script>
+    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
   </head>
 
   <body>
 
     <!-- Top nav bar (fixed) -->
     <nav id="nav-bar">
-      <img class="logo" src="/images/bird.png" width="80px" height="80px">
+      <img class="logo" src="/images/bird.png">
       <span class="header">Tweeter</span>
+      <ul>
+        <li class="button1"><a id="Compose" href="#Compose"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>Compose</a></li>
+      </ul>
     </nav>
 
     <!-- Page-specific (main) content here -->
     <main class="container">
+      <section class="new-tweet">
+        <h2>Compose Tweet</h2>
+        <form id="form">
+          <textarea id="text" name="text" placeholder="What are you humming about?"></textarea>
+          <input id="button" type="submit" value="Tweet">
+          <p id="message"> </p>
+          <span class="counter">140</span>
+        </form>
+      </section>
+      <section id="tweets">
+       <!--  <article class="tweet">
+          <header class="tweet-header">
+            <div class ="avatar"></div>
+            <h2>Zoeyyandi</h2>
+            <p>@zoey</p>
+          </header>
+          <p class="tweet-title">Little tweet here </p>
+          <footer class="tweet-footer">
+            <div class="left">
+              <p>Last updated</p>
+            </div>
+            <div class="right">
+              <ul class="icons">
+                <li><i class="fa fa-flag" aria-hidden="true"></i></li>
+                <li><i class="fa fa-retweet" aria-hidden="true"></i></li>
+                <li><i class="fa fa-heart" aria-hidden="true"></i></li>
+              </ul>
+            </div>
+          </footer>
+        </article>
+ -->      </section>
     </main>
 
   </body>
