added user registration and log in, and likes feature

--- a/public/index.html
+++ b/public/index.html
@@ -29,45 +29,44 @@
     <nav id="nav-bar">
       <img class="logo" src="/images/bird.png">
       <span class="header">Tweeter</span>
-      <ul>
-        <li class="button1"><a id="Compose" href="#Compose"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>Compose</a></li>
+      <ul id="buttons">
       </ul>
     </nav>
 
+   
+
     <!-- Page-specific (main) content here -->
     <main class="container">
-      <section class="new-tweet">
-        <h2>Compose Tweet</h2>
-        <form id="form">
-          <textarea id="text" name="text" placeholder="What are you humming about?"></textarea>
-          <input id="button" type="submit" value="Tweet">
-          <p id="message"> </p>
-          <span class="counter">140</span>
-        </form>
-      </section>
-      <section id="tweets">
-       <!--  <article class="tweet">
-          <header class="tweet-header">
-            <div class ="avatar"></div>
-            <h2>Zoeyyandi</h2>
-            <p>@zoey</p>
-          </header>
-          <p class="tweet-title">Little tweet here </p>
-          <footer class="tweet-footer">
-            <div class="left">
-              <p>Last updated</p>
-            </div>
-            <div class="right">
-              <ul class="icons">
-                <li><i class="fa fa-flag" aria-hidden="true"></i></li>
-                <li><i class="fa fa-retweet" aria-hidden="true"></i></li>
-                <li><i class="fa fa-heart" aria-hidden="true"></i></li>
-              </ul>
-            </div>
-          </footer>
-        </article>
- -->      </section>
     </main>
 
   </body>
 </html>
+
+<!-- <section class="login-form"> 
+  <h2>Login</h2>
+  <form id="loginForm">
+      <label class="loginCredentials">Email Address*:</label> <br/>
+      <input name='Email' type = 'Email'/> <br/>
+      <label class="loginCredentials">Password*:</label> <br/>
+      <input name='Password' type ='password'/> <br/>
+      <input type="submit" value = 'Login'/>
+  </form> 
+</section>
+
+<section class="register-form"> 
+    <h2>Register</h2>
+    <form id="registerForm">
+        <label class="loginCredentials">First Name:</label> <br/>
+        <input name='fName' type = 'text'/> <br/>
+        <label class="loginCredentials">Last Name:</label> <br/>
+        <input name='lName' type = 'text'/> <br/>
+        <label class="loginCredentials">Email Address*:</label> <br/>
+        <input name='Email' type = 'email'/> <br/>
+        <label class="loginCredentials">Password*:</label> <br/>
+        <input name='Password' type ='password'/> <br/>
+        <input type="submit" value = 'Login'/>
+  </form>   
+</section> -->
+
+
+
